# pse-contacts-notion-to-vcf

./: .gitignore  README.md  Untitled.ipynb  cli.py  config.py  create_vcards.py  main.py  parse_notion_csv.py  pyproject.toml  utils.py
